💚 fix social icon wrapping

--- a/style.css
+++ b/style.css
@@ -575,6 +575,7 @@ main.post .social {
 	margin: 4rem 0 0 0;
 	border-top: 1px solid var(--c-neutral-high-accent);
 	display: flex;
+	flex-wrap: wrap;
 	justify-content: center;
 	gap: 2rem;
 	font-size: 2rem;
